<resources>
    <string name="app_name">Android Practice</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="you_selected">You selected:</string>
    <string name="checked">checked</string>
    <string name="unchecked">unchecked</string>
    <string name="pre_msg">TextView is</string>
    <string-array name="countries">

        <item>Jordan</item>
        <item>USA</item>
        <item>Canada</item>
        <item>Great Britain</item>
        <item>Germany</item>
        <item>India</item>
        <item>China</item>
    </string-array>
    <string name="random_text_1">
        Hadoop is a data processing tool used to process large size data over distributed
        commodity hardware. The trend of Big Data Hadoop market is on the boom and it’s
          not showing any kind of deceleration in its growth. Today, industries are capable
          of storing all the data generated at their business at an affordable price just
          because of Hadoop. Hadoop helps the industry to know their customer’s behavior,
          customers buying priorities i.e. what they loved the most, and click patterns,
          etc. Hadoop provides personalized recommendations and personalizes ad targeting
          features. Companies are generating thousands of petabytes of data every day so the
          demand for Big Data professionals is very high. Even after a few years,
          Hadoop will be considered as the must-learn skill for the data-scientist
          and Big Data Technology. Companies are investing big in it and it will become
          an in-demand skill in the future. Hadoop provides personalized recommendations
        and personalizes ad targeting
          features. Companies are generating thousands of petabytes of data every day so the
          demand for Big Data professionals is very high. Even after a few years,
          Hadoop will be considered as the must-learn skill for the data-scientist
          and Big Data Technology. Companies are investing big in it and it will become
          an in-demand skill in the future.
    </string>
    <string name="random_text_2">
          Humans are coming closer to the internet at a very fast rate. It means that the
          volume of data Industries is gathering will increase as time passes because of
          more users. Industry’s are gradually analyzing the need for this useful information
          they are getting from their users. It is for sure that the data always tends to
          an increasing pattern so the company’s are eventually acquiring professionals
          skilled with Big Data Technologies. According to NASSCOM, India’s Big Data
          Market will reach 16 billion USD by 2025 from 2 billion USD. The growth of smart
          devices in India is growing at a very huge rate that will cause growth in the
          Big Data Market. Since Big Data is growing the demand for Big Data professionals
          will be high.  Hadoop provides personalized recommendations and personalizes ad targeting
          features. Companies are generating thousands of petabytes of data every day so the
          demand for Big Data professionals is very high. Even after a few years,
          Hadoop will be considered as the must-learn skill for the data-scientist
          and Big Data Technology. Companies are investing big in it and it will become
          an in-demand skill in the future.
    </string>
    <string name="list_view">List View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="collapsing">Collapsing</string>
    <string name="drawer">Drawer</string>
    <string name="menu_group">Menu Group</string>
    <string name="radio_button">Radio Button</string>
    <string name="spinner">Spinner</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="table_layout">Table Layout</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="scroll_vertical">Scroll Vertical</string>
    <string name="scroll_horizontal">Scroll Horizontal</string>
    <string name="scroll_nested">Scroll Nested</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="custom_spinner">Custom Spinner With Text and Image</string>
    <string name="coordinator_layout">Coordinator Layout</string>
    <string name="change_text">Change This Text Style\nUsing Toolbar Menu</string>
    <string name="select_country">Select Country</string>
    <string name="auto_complete_text">Auto Complete Text</string>
    <string name="simple_alert">Simple Alert</string>
    <string name="multiple_choices">Multiple Choices</string>
    <string name="list_of_items">List of Items</string>
    <string name="custom_layout">Custom Layout</string>
    <string name="contains_edittext">Contains EditText</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="custom_dialog_message">This is a custom dialog message</string>
    <string name="dismiss">Dismiss</string>
    <string name="alter_dialog">Alter Dialog</string>
    <string name="create_post">Create a Post</string>
    <string name="post">Post</string>
    <string name="snap_post">Snap post</string>
    <string name="bottom_sheet_dialog">Bottom Sheet Dialog</string>
    <string name="send_notification">Send Notification</string>
    <string name="welcome">Welcome To Android</string>
    <string name="notifications">Notifications</string>
    <string name="whats_on_your_mind">Whats on your mind?</string>
    <string name="comment">Comment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="apple">Apple</string>
    <string name="decs_01">decs 01</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="clear">Clear</string>
    <string name="button_one">Button One</string>
    <string name="button_two">Button Two</string>
    <string name="button_three">Button Three</string>
    <string name="button_four">Button Four</string>
    <string name="button_five">Button Five</string>
    <string name="button_six">Button Six</string>
    <string name="button_seven">Button Seven</string>
    <string name="button_eight">Button Eight</string>
    <string name="button_nine">Button Nine</string>
    <string name="nested_scroll_view">Nested Scroll View</string>
    <string name="scrollview">ScrollView</string>
    <string name="welcome_to_android">Welcome to Android</string>
    <string name="h">H</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment">Fragment</string>
    <string name="fragment_y">Fragment y</string>
    <string name="fragment_x">Fragment x</string>
    <string name="from_activity_to_fragment">Send from Activity to Fragment</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send_message">Send Message</string>
    <string name="fragment_to_fragment">Fragment to Fragment</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="fragment_toolbar">fragment toolbar</string>
    <string name="view_pager">View Pager</string>
    <string name="hello_custom_views">Hello Custom Views</string>
    <string name="custom_view">Custom View</string>
    <string name="show">Show</string>
    <string name="dialog_fragment">Dialog Fragment</string>
    <string name="btn_persistent">Persistent Bottom Sheet</string>
    <string name="btn_modal">Modal Bottom Sheet</string>
    <string name="tv_title">Learn Bottom Sheet</string>
    <string name="tv_description">
        A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
        some task in Android. Types of BottomSheet \n\nA BottomSheet is of two types: \n\nPersistent BottomSheet \n\nModal BottomSheet</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>
    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="send_message_to_activity">Send Message To Activity</string>
    <string name="to_parent_fragment">Send Message to parent fragment</string>
    <string name="fragment_inside_fragment">Fragment Inside Fragment</string>
    <string name="pages">pages</string>
    <string name="chat">Chat</string>
    <string name="call">call</string>
    <string name="chats">Chats</string>
    <string name="calls">Calls</string>
    <string name="status">Status</string>
    <string name="make_call">Make call</string>
    <string name="make_chat">Make Chat</string>
    <string name="change_status">Change status</string>
    <string name="submit">Submit</string>
    <string name="save">save</string>
    <string name="second_activity">Second Activity</string>
    <string name="restore">Restore</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth Date</string>
    <string name="add_new_item">Add new item</string>
    <string name="clear_found_items">Clear found item</string>
    <string name="apples">apples</string>
    <string name="_1">1</string>
    <string name="plus_sign">+</string>
    <string name="hide_count_1">Hide count of 1</string>
    <string name="hide_count_1_description">When the count of an item is 1, hide the number in the list</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="pref_key_allow_notification" translatable="false">pref_allow_notification</string>
    <string name="pref_key_zipcode" translatable="false">pref_key_zipcode</string>
    <string name="pref_key_unit" translatable="false">pref_key_unit</string>
    <string name="get">get</string>
    <string name="insert">insert</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="create_notifications">create notifications</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notification_channel_followers">Follower Notification Channel</string>
    <string name="notification_channel_direct_message">Direct Messages Channel</string>
    <string name="got_to_settings_button">Go to Settings</string>
    <string name="follower_title">Test Follower Notifications</string>
    <string name="follower_added">Follower Added</string>
    <string name="follower_removed">Follower Removed</string>
    <string name="follower_notification_settings_button">Follower Notification Settings</string>
    <string name="test_dm_title">Test Direct Message Notifications</string>
    <string name="coworker_dm_button">From Coworker</string>
    <string name="friend_dm_button">From Friend</string>
    <string name="dm_notification_settings_button">DM Notification Settings</string>
    <string name="follower_title_notification">Follower</string>
    <string name="direct_message_title_notification">Direct Message</string>
    <string name="follower_added_notification_body">%1$s is now following you!</string>
    <string name="follower_removed_notification_body">%1$s has stopped following you.</string>
    <string name="dm_friend_notification_body">%1$s: What\'s up?</string>
</resources>