<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".alertdialog.CustomAlertDialog">


    <Button
        android:id="@+id/btSimpleAlert"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/simple_alert" />

    <Button
        android:id="@+id/btMultipleChoices"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/multiple_choices" />

    <Button
        android:id="@+id/btListOfItems"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/list_of_items" />

    <Button
        android:id="@+id/btCustomLayout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/custom_layout" />

    <Button
        android:id="@+id/btContainsEditText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/contains_edittext" />

    <Button
        android:id="@+id/btBottomSheetDialog"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/bottom_sheet_dialog" />
</LinearLayout>