<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <include
        android:id="@+id/relative_toolbar"
        layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:layout_below="@+id/relative_toolbar"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/img_logo"
        android:layout_centerHorizontal="true"
        android:hint="@string/full_name"
        android:textSize="22sp"
        android:padding="12dp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:padding="12dp"
        android:textSize="22sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/et_full_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:hint="@string/password"
        android:textSize="22sp"
        android:inputType="textPassword" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/eb_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_below="@+id/rg"
        android:padding="8dp"
        android:textSize="22sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_margin="8dp"
        android:layout_toLeftOf="@id/btn_clear"
        android:text="@string/register"
        android:textSize="22sp"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>
</RelativeLayout>