<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/ic_launcher_background"
        android:gravity="center"
        android:text="@string/custom_dialog"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/custom_dialog_message"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DEDEDE" />

    <Button
        android:id="@+id/btDismissCustomDialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?selectableItemBackground"
        android:text="@string/dismiss" />
</LinearLayout>