<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@android:color/holo_blue_bright"
    android:orientation="vertical"
    tools:context=".fragment.fragmentinsidefragment.ChildFragment">

    <TextView
        android:id="@+id/tv_child"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/child_fragment_contact_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message_to_activity" />

        <Button
            android:id="@+id/child_fragment_contact_parent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_parent_fragment" />
    </LinearLayout>

</LinearLayout>